# Devops

./: Dockerfile  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  http_server  http_server.cpp  main.cpp  program  series.cpp  series.h  series_BACKUP_3901.cpp  series_REMOTE_3901.cpp  test_series  test_series.cpp
.deps/: test_series.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.2  traces.4
